library/pod-security-policy/fsgroup/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspfsgroup
spec:
  crd:
    spec:
      names:
        kind: K8sPSPFSGroup
        listKind: K8sPSPFSGroupList
        plural: k8spspfsgroup
        singular: k8spspfsgroup
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            rule:
              type: string
            ranges:
              type: array
              items:
                type: object
                properties:
                  min:
                    type: integer
                  max:
                    type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspfsgroup

        violation[{"msg": msg, "details": {}}] {
          spec := input.review.object.spec
          not input_fsGroup_allowed(spec)
          msg := sprintf("The provided pod spec fsGroup is not allowed, pod: %v. Allowed fsGroup: %v", [input.review.object.metadata.name, input.parameters])
        }

        input_fsGroup_allowed(spec) {
          # RunAsAny - No range is required. Allows any fsGroup ID to be specified.
          input.parameters.rule == "RunAsAny"
        }
        input_fsGroup_allowed(spec) {
          # MustRunAs - Validates pod spec fsgroup against all ranges
          input.parameters.rule == "MustRunAs"
          fg := spec.securityContext.fsGroup
          count(input.parameters.ranges) > 0
          range := input.parameters.ranges[_]
          value_within_range(range, fg)
        }
        input_fsGroup_allowed(spec) {
            # MayRunAs - Validates pod spec fsgroup against all ranges or allow pod spec fsgroup to be left unset
            input.parameters.rule == "MayRunAs"
            not has_field(spec, "securityContext")
        }
        input_fsGroup_allowed(spec) {
            # MayRunAs - Validates pod spec fsgroup against all ranges or allow pod spec fsgroup to be left unset
            input.parameters.rule == "MayRunAs"
            not spec.securityContext.fsGroup
        }
        input_fsGroup_allowed(spec) {
          # MayRunAs - Validates pod spec fsgroup against all ranges or allow pod spec fsgroup to be left unset
          input.parameters.rule == "MayRunAs"
          fg := spec.securityContext.fsGroup
          count(input.parameters.ranges) > 0
          range := input.parameters.ranges[_]
          value_within_range(range, fg)
        }
        value_within_range(range, value) {
          range.min <= value
          range.max >= value
        }
        # has_field returns whether an object has a field
        has_field(object, field) = true {
          object[field]
        }
